# pandas.c

./: CMakeLists.txt  Makefile  README.md
examples/: example_dataframe_usage.c  example_pandas_usage.c  example_series_usage.c  example_utils_usage.c
src/: csv_header.c  csv_header.h  csv_reader.c  dataframe.c  dataframe.h  pandas.c  pandas.h  series.c  series.h  utils.c  utils.h
test/: test_csv_reader.c  test_data_failure.csv  test_data_success.csv  test_dataframe.c  test_series.c  test_utils.c
